--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
       href="https://fonts.googleapis.com/css?family=Literata|Barriecito|Ubuntu&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Kapray</title>
   </head>
   <body>
